--- a/Main.html
+++ b/Main.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <header>
+  <div class="site-title">MATT MORRILL</div>
+  <div class="site-title" id="subtitle">Health care expert, Post-apocalyptic fiction fan, journeyman coder/data scientist</div>
   <div class="topnav">
-    <a id="myname">MATT MORRILL</a>
     <a class="active" href="#home">Home</a>
     <a href="blog">Data Blog</a>
     <a href="https://www.amazon.com/Your-Roaring-Twenties-Paycheck-Paycheck-ebook/dp/B01053NET0">Book</h2>
