--- a/Main.html
+++ b/Main.html
@@ -4,6 +4,7 @@
   <title>Matt Morrill's Portfolio</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
 <header>
@@ -11,13 +12,26 @@
   <div class="site-title" id="subtitle">Health care expert, Post-apocalyptic fiction fan, journeyman coder/data scientist</div>
   <div class="topnav">
     <a class="active" href="#home">Home</a>
-    <a href="blog">Data Blog</a>
+    <a href="blog">Blog</a>
     <a href="https://www.amazon.com/Your-Roaring-Twenties-Paycheck-Paycheck-ebook/dp/B01053NET0">Book</h2>
     <a href="fiction">Post-apocalyptic Fiction</a>
     <a href="https://github.com/msmorr">GitHub</a>
   </div>
 </header>
 <body>
-  <p>This is where I'll put stuff I like.</p>
+  <div class="container">
+    <div class="content-box">
+      <h1>About Me</h1>
+      <p>This is my intro page.</p>
+      <ul>
+        <li>Graduate of the College of William and Mary, Class of 2009</li>
+        <li>Health care consultant with 7 years' industry experience</li>
+        <li>Coder-in-training (know the basics of html, css, Javascript, JQuery, Python, SQL, and R)</li>
+        <li>Fascinated by data science</li>
+        <li>Post-apocalyptic fiction and alternate history fan</li>
+      </ul>
+      <h2>Other Stuff</h2>
+    </div>
+  </div>
 </body>
 </html>
